# ActorCore

./: .gitignore  CMakeLists.txt  README.md
samples/: CMakeLists.txt
src/: CMakeLists.txt
src/Actors/: ActorBlocking.cpp  ActorBlocking.h  ActorEventBased.cpp  ActorEventBased.h  ActorFactoryCollection.hpp  ActorLocal.cpp  ActorLocal.h  IAbstractActor.h
src/Core/: DataPublisher.cpp  DataPublisher.h  DataPublisherFunctor.hpp  FactoryCollection.hpp  IData.h  IDataObserver.h  IDataPublisher.h  IMessage.h  IMessageObserver.h  IMessagePublisher.h  ISnapshotable.h  IUnit.h  Message.hpp  MessagePublisher.cpp  MessagePublisher.h  MessagePublisherFunctor.hpp  SharedQueue.cpp  SharedQueue.h  SharedQueue.hpp  UidGenerator.hpp
src/Ports/: IPort.h  PortBase.cpp  PortBase.h  PortBiDirectional.cpp  PortBiDirectional.h  PortFactory.cpp  PortFactory.h  PortInput.cpp  PortInput.h  PortOutput.cpp  PortOutput.h
src/System/: SystemLocal.cpp  SystemLocal.h  SystemSnapshotManager.cpp  SystemSnapshotManager.h
src/Utils/: Logger.cpp  Logger.h
tests/: ActorSimpleBlockingForTest.hpp  ActorSimpleEventBasedForTest.hpp  CMakeLists.txt  FabricActorForTest.hpp  testActorsInterchage.cpp  testNotifierFunctor.cpp  testSystemActorSpawn.cpp
